--- a/build.gradle
+++ b/build.gradle
@@ -30,8 +30,12 @@ ext {
     compileSdkVersion = 31
 
     // App dependencies
+
+    archTestingVersion = '2.1.0'
+    robolectricVersion = '4.8.1'
     androidXVersion = '1.0.0'
     androidXTestCoreVersion = '1.3.0'
+    hamcrestVersion = '2.2'
     androidXTestExtKotlinRunnerVersion = '1.1.3'
     androidXTestRulesVersion = '1.2.0'
     androidXAnnotations = '1.3.0'
